<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etMovieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movie_name_hint"/>
        <EditText
            android:id="@+id/etMovieYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movie_year_hint"
            android:inputType="number"/>
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"/>
        <ImageView
            android:id="@+id/imgPoster"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:contentDescription="@string/movie_poster"/>
        <Button
            android:id="@+id/btnAddMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_movie"
            android:visibility="gone"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>